# quantum_relu

./: .coveragerc  .gitignore  QReLU_TensorFlow_Keras.py  README.md  environment.yml  m_QReLU_TensorFlow_Keras.py  pyproject.toml
examples/: __init__.py  cnn_example.py  cnn_example_pytorch.py  cnn_example_tf_keras.py  constants.py
src/: __init__.py  constants.py
src/examples/: __init__.py  cnn_example.py
src/examples/tf_keras/: cnn_example.py
src/pytorch/: __init__.py  quantum_activations.py
src/tf_keras/: __init__.py  constants.py  m_qrelu.py  qrelu.py  quantum_activations.py  utils.py
tests/tf_keras/: test_quantum_activation.py  test_quantum_activations.py
